[package]
name = "remu"
version = "0.2.0"
authors = ["Klimov Nikolay <klimov.ns@mail.ru>"]
edition = "2021"

[features]
mock-time = []

[lib]
name = "remu_backend"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "remu"
path = "src/remu.rs"

[dependencies]
chrono = "0.4"
regex = "1.6"
log = "0.4"
fern = "0.6"# log
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]
