[package]
name = "remu"
version = "0.2.0"
authors = ["Klimov Nikolay <klimov.ns@mail.ru>"]
edition = "2024"

[features]
mock-time = []

[[bin]]
name = "remu"
path = "src/remu.rs"

[dependencies]
chrono = "0.4"
calendarize = "1.1"
regex = "1.12"
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
frankenstein = { version = "0.45", features = ["client-ureq"] }
env_logger = "0.11"
anyhow = "1.0.100"

[dev-dependencies]
chaos_theory = "0.1.6"
